Fix view in docs not showing on hover

--- a/pages/themes/playground.module.css
+++ b/pages/themes/playground.module.css
@@ -62,6 +62,6 @@
   transition: opacity 50ms linear;
 }
 
-.PlaygroundSection:hover .ViewDocsLink {
+.PlaygroundSection:hover .PlaygroundDocsLink {
   opacity: 1;
 }
